--- a/migliore_et_al_2018/migliore_et_al_2018.html
+++ b/migliore_et_al_2018/migliore_et_al_2018.html
@@ -344,7 +344,18 @@
 
 <h5><span class="txt_style1"><strong><a id="Models" name="Models"><span style="color:#0000cd">MOD FILES</span></a></strong></span></h5>
 
-<p><span class="txt_style1">A reduced self-consistent set of files needed to reproduce&nbsp;Fig.4a of the paper is available on <a href="https://senselab.med.yale.edu/modeldb/enterCode.cshtml?model=244688#tabs-1" target="_blank"><span class="color_link">ModelDB.</span> </a></span></p>
+<p><span class="txt_style1">A reduced self-consistent set of files needed to reproduce&nbsp;Fig.4a of the paper is available on <a href="https://senselab.med.yale.edu/modeldb/enterCode.cshtml?model=244688#tabs-1" target="_blank"><span class="color_link">ModelDB.<br><br></span></a> Use the BSP Neuron As A Service (NaaS) tool to do in silico experiments with the single cell models shown in Fig.4A.<br>Start by clicking on any button below to launch the tool and run one of the simulations of Fig.4a.</span></p>
+
+<div class="panel">
+	<button id="Button1" class="button button_1" onclick="SendData()">int bAC 0.6 nA</button>
+	<button id="Button1" class="button button_1">int bAC 1.0 nA</button>
+	<button id="Button1" class="button button_1">int cAC 0.4 nA</button>
+	<button id="Button1" class="button button_1" >int cAC 0.6 nA</button>
+	<button id="Button1" class="button button_1">int cNAC 0.4 nA</button>
+	<button id="Button1" class="button button_1">int cNAC 0.8 nA</button>
+	<button id="Button1" class="button button_1">pyr cAC 0.4 nA</button>
+	<button id="Button1" class="button button_1">pyr cAC 0.8 nA</button>
+</div>
 
 <p>&nbsp;</p>
 
