panel MOD files

--- a/migliore_et_al_2018/migliore_et_al_2018.html
+++ b/migliore_et_al_2018/migliore_et_al_2018.html
@@ -344,17 +344,20 @@
 
 <h5><span class="txt_style1"><strong><a id="Models" name="Models"><span style="color:#0000cd">MOD FILES</span></a></strong></span></h5>
 
-<p><span class="txt_style1">A reduced self-consistent set of files needed to reproduce&nbsp;Fig.4a of the paper is available on <a href="https://senselab.med.yale.edu/modeldb/enterCode.cshtml?model=244688#tabs-1" target="_blank"><span class="color_link">ModelDB.<br><br></span></a> Use the BSP Neuron As A Service (NaaS) tool to do in silico experiments with the single cell models shown in Fig.4A.<br>Start by clicking on any button below to launch the tool and run one of the simulations of Fig.4a.</span></p>
+<p><span class="txt_style1">A reduced self-consistent set of files needed to reproduce&nbsp;Fig.4A of the paper is available on <a href="https://senselab.med.yale.edu/modeldb/enterCode.cshtml?model=244688#tabs-1" target="_blank"><span class="color_link">ModelDB.<br><br></span></a> Use the BSP Neuron As A Service (NaaS) tool to do in silico experiments with the single cell models shown in Fig.4A:<br></span></p>
+<div class="txt_style1">
+	<ul>
+		<li>Start by clicking on any button below to launch the tool.</li>
+		<li>After entering the Naas page, select the appropriate amplitude (e.g. 0.6 nA or 1.0 nA for the "int bAC" model) in the "amp" field of the "Simulation" panel.</li>
+		<li>Run the simulation by clicking on the "Start simulation" button.</li>
+	</ul>
+</div>
 
 <div class="panel">
-	<button id="Button1" class="button button_1" onclick="SendData()">int bAC 0.6 nA</button>
-	<button id="Button1" class="button button_1">int bAC 1.0 nA</button>
-	<button id="Button1" class="button button_1">int cAC 0.4 nA</button>
-	<button id="Button1" class="button button_1" >int cAC 0.6 nA</button>
-	<button id="Button1" class="button button_1">int cNAC 0.4 nA</button>
-	<button id="Button1" class="button button_1">int cNAC 0.8 nA</button>
-	<button id="Button1" class="button button_1">pyr cAC 0.4 nA</button>
-	<button id="Button1" class="button button_1">pyr cAC 0.8 nA</button>
+	<button id="Button1" class="button button_1" onclick="SendData()">int bAC (0.6 nA - 1.0 nA)</button>
+	<button id="Button1" class="button button_1">int cAC (0.4 nA - 0.6 nA)</button>
+	<button id="Button1" class="button button_1">int cNAC (0.4 nA - 0.8 nA)</button>
+	<button id="Button1" class="button button_1">pyr cAC (0.4 nA - 0.8 nA)</button>
 </div>
 
 <p>&nbsp;</p>
