--- a/migliore_et_al_2018/migliore_et_al_2018.html
+++ b/migliore_et_al_2018/migliore_et_al_2018.html
@@ -348,19 +348,19 @@
 <div class="txt_style1">
 	<ul>
 		<li>Start by clicking on any button below to launch the tool.</li>
-		<li>After entering the Naas page, select the appropriate amplitude (e.g. 0.6 nA or 1.0 nA for the "int bAC" model) in the "amp" field of the "Simulation" panel.</li>
-		<li>Run the simulation by clicking on the "Start simulation" button.</li>
+		<li>After entering the NaaS page, select the amplitude corresponding to the chosen model in the "amp" field of the "Simulation" panel.</li>
+		<li>Run the simulation by clicking the "Start simulation" button.</li>
 	</ul>
 </div>
 
 <div class="panel">
 	<button id="Button1" class="button button_1" onclick="window.open('https://blue-naas.humanbrainproject.eu/#/model/CA1_int_bAC_011023HP2_20180116154023')">int bAC 0.6 nA</button>
-	<button id="Button1" class="button button_1">int bAC 1.0 nA</button>
+	<button id="Button1" class="button button_1" disabled>int bAC 1.0 nA</button>
 	<button id="Button1" class="button button_1" onclick="window.open('https://blue-naas.humanbrainproject.eu/#/model/CA1_int_cAC_980120A_20180115155814')">int cAC 0.4 nA</button>
 	<button id="Button1" class="button button_1" onclick="window.open('https://blue-naas.humanbrainproject.eu/#/model/CA1_int_cAC_980513B_20180119155952')">int cAC 0.6 nA</button>
 	<button id="Button1" class="button button_1" onclick="window.open('https://blue-naas.humanbrainproject.eu/#/model/CA1_int_cNAC_980513B_20180119155127')">int cNAC 0.4 nA</button>
 	<button id="Button1" class="button button_1" onclick="window.open('https://blue-naas.humanbrainproject.eu/#/model/CA1_int_cNAC_060314AM2_20180120154747')">int cNAC 0.8 nA</button>
-	<button id="Button1" class="button button_1">pyr cAC 0.4 nA</button>
+	<button id="Button1" class="button button_1" disabled>pyr cAC 0.4 nA</button>
 	<button id="Button1" class="button button_1" onclick="window.open('https://blue-naas.humanbrainproject.eu/#/model/CA1_pyr_cACpyr_mpg141209_A_idA_20170912152008')">pyr cAC 0.8 nA</button>
 </div>
 
