--- a/migliore_et_al_2018/migliore_et_al_2018.html
+++ b/migliore_et_al_2018/migliore_et_al_2018.html
@@ -27,10 +27,10 @@
 
 <h5>&nbsp;</h5>
 
-<h4 class="txt_style"><strong>Authors</strong>: Rosanna Migliore<sup>1</sup>, Carmen A. Lupascu<sup>1</sup>, Luca L. Bologna<sup>1</sup>, Armando Romani<sup>2</sup>, Jean-Denis Courcol<sup>2</sup>, Stefano Antonel<sup>2</sup>, Werner A.H. Van Geit<sup>2</sup>, Alex M. Thomson<sup>4</sup>, Audrey Mercer<sup>4</sup>, Sigrun Lange<sup>4,5</sup>, Joanne Falck<sup>4</sup>, Christian A. Rössert<sup>2</sup>, Ying Shi<sup>2</sup>, Olivier Hagens<sup>6</sup>, Maurizio Pezzoli<sup>6</sup>, Tamas F. Freund<sup>3,7</sup>, Szabolcs Kali<sup>3,7</sup>, Eilif B. Muller<sup>2</sup>, Felix Schürmann<sup>2</sup>, Henry Markram<sup>2</sup>, and Michele Migliore<sup>1</sup></h4>
+<h4 class="txt_style"><strong>Authors</strong>: Rosanna Migliore<sup>1</sup>, Carmen A. Lupascu<sup>1</sup>, Luca L. Bologna<sup>1</sup>, Armando Romani<sup>2</sup>, Jean-Denis Courcol<sup>2</sup>, Stefano Antonel<sup>2</sup>, Werner A.H. Van Geit<sup>2</sup>, Alex M. Thomson<sup>3</sup>, Audrey Mercer<sup>3</sup>, Sigrun Lange<sup>3,4</sup>, Joanne Falck<sup>3</sup>, Christian A. Rössert<sup>2</sup>, Ying Shi<sup>2</sup>, Olivier Hagens<sup>5</sup>, Pezzoli Maurizio<sup>5</sup>, Tamas F. Freund<sup>6,7</sup>, Szabolcs Kali<sup>6,7</sup>, Eilif B. Muller<sup>2</sup>, Felix Schürmann<sup>2</sup>, Henry Markram<sup>2</sup>, and Michele Migliore<sup>1</sup></h4>
 
 
-<h4 class="txt_style"><strong>Author information</strong>: <sup>1</sup> Institute of Biophysics, National Research Council, Palermo, Italy,&nbsp; <sup>2 </sup>Blue Brain Project, École Polytechnique Fédérale de Lausanne, Campus Biotech, Geneva, Switzerland, <sup>3</sup> Institute of Experimental Medicine, Hungarian Academy of Sciences, Budapest, Hungary,&nbsp; <sup>4</sup> University College London, United Kingdom,&nbsp; <sup>5 </sup>University of Westminster, London, United Kingdom,&nbsp; <sup>6</sup> Laboratory of Neural Microcircuitry (LNMC), Brain Mind Institute, EPFL, Lausanne, Switzerland, <sup>7</sup> Faculty of Information Technology and Bionics, Pázmány Péter Catholic University, Budapest, Hungary</h4>
+<h4 class="txt_style"><strong>Author information</strong>: <sup>1</sup> Institute of Biophysics, National Research Council, Palermo, Italy, <sup>2 </sup>Blue Brain Project, École Polytechnique Fédérale de Lausanne, Campus Biotech, Geneva, Switzerland, <sup>3</sup> University College London, United Kingdom,<sup>4</sup> University of Westminster, London, United Kingdom,<sup>5 </sup>Laboratory of Neural Microcircuitry (LNMC), Brain Mind Institute, EPFL, Lausanne, Switzerland,<sup>6</sup> Institute of Experimental Medicine, Hungarian Academy of Sciences, Budapest, Hungary, <sup>7</sup> Faculty of Information Technology and Bionics, Pázmány Péter Catholic University, Budapest, Hungary.</h4>
 
 
 <h4 class="txt_style"><strong>Corresponding author:</strong> Rosanna Migliore - <em>email: rosanna.migliore@cnr.it</em></h4>
@@ -344,12 +344,11 @@
 
 <h5><span class="txt_style1"><strong><a id="Models" name="Models"><span style="color:#0000cd">MOD FILES</span></a></strong></span></h5>
 
-<p><span class="txt_style1">A reduced self-consistent set of files needed to reproduce&nbsp;Fig.4A of the paper is available on <a href="https://senselab.med.yale.edu/modeldb/enterCode.cshtml?model=244688#tabs-1" target="_blank"><span class="color_link">ModelDB.<br><br></span></a> Use the BSP Neuron As A Service (NaaS) tool to do in silico experiments with the single cell models shown in Fig.4A:<br></span></p>
+<p><span class="txt_style1">A reduced self-consistent set of files needed to reproduce&nbsp;Fig.4A of the paper is available on <a href="https://senselab.med.yale.edu/modeldb/enterCode.cshtml?model=244688#tabs-1" target="_blank"><span class="color_link">ModelDB.<br><br></span></a>Use the BSP Neuron As A Service (NaaS) tool to do in silico experiments with the single cell models shown in Fig.4A:<br></span></p>
 <div class="txt_style1">
 	<ul>
-		<li>Start by clicking on any button below to launch the tool.</li>
-		<li>After entering the NaaS page, select the amplitude corresponding to the chosen model in the "amp" field of the "Simulation" panel.</li>
-		<li>Run the simulation by clicking the "Start simulation" button.</li>
+		<li>Start by clicking on any button below to run a simulation.</li>
+		<li>After entering the NaaS page, click on the "Simulation" tab and run the simulation by clicking the "Start simulation" button.</li>
 	</ul>
 </div>
 
