--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script>  
 		console.log("######################");
-        	var url = 'https://object.cscs.ch/v1/AUTH_63ea6845b1d34ad7a43c8158d9572867/hbp-00713_mIPSCs-scFv-gephcyto/mIPSCs-scFv-gephcyto/mIPSCs-g
+        	var url = 'https://object.cscs.ch/v1/AUTH_63ea6845b1d34ad7a43c8158d9572867/hbp-00713_mIPSCs-scFv-gephcyto/mIPSCs-scFv-gephcyto/mIPSCs-gephcyto/gephcyto-c2/hbp-00713_sIPSCs-scFvGephcyto_sIPSCs-gephcyto_gephcyto-c2__GEPH-CYTO_c2.txt';
     		var storedText;                                                                 
                                                                                     
 	fetch(url)                                                                          
